[package]
name = "axum_sqlx"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
axum = "0.6.1"
dotenv = "0.15.0"
env_logger = "0.10.0"
serde = "1.0.149"
serde_json = "1.0.89"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres"] }
thiserror = "1.0.37"
tokio = { version = "1.23.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.2.2", features = ["serde"] }
